# payments

./: .dockerignore  Dockerfile  Dockerfile.dev  Makefile  README.md  create_file_upload.py  docker-compose.yml  pyproject.toml  startup.sh  upload_large.csv  upload_small.csv
alembic/: env.py
alembic/versions/: 02269cc0a416_.py  cc836e194820_.py
app/: __init__.py  background_tasks.py  input_request.py  main.py  process_bank_slip.py
app/config/: celery.py  db.py  settings.py
app/models/: bank_slip.py
app/repositories/: bank_slip.py
tests/: conftest.py  main_integration_test.py  main_test.py
tests/fixtures/: upload_content_type.txt  upload_invalid_content.csv  upload_large.csv  upload_ok.csv
