[tool.poetry]
name = "payments"
version = "0.1.0"
description = ""
authors = ["Davi Nogueira <davisnog@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
uvicorn = "~0.23.1"
gunicorn = "~21.2.0"
fastapi = "~0.100.0"
python-multipart = "^0.0.6"
faker = "^19.2.0"
pydantic = {extras = ["email"], version = "^2.1.1"}
celery = {extras = ["redis"], version = "^5.3.1"}
flower = "^2.0.0"
alembic = "^1.11.1"
sqlalchemy = "^2.0.19"
psycopg = {extras = ["binary", "pool"], version = "^3.1.9"}

[tool.poetry.group.test.dependencies]
pytest = "^7.4.0"
httpx = "^0.24.1"
pytest-mock = "^3.11.1"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
